GL/Projet_GL/src/test/deca/context/valid/sansObjet/bool/comparaison_simple.deca
// Test : comparison_simple
// But : tester une comparaison simple entre entiers.
// Couvre : <, typage boolean.
// Résultat attendu : compilation sans erreur.

{
    boolean b;
    b = 3 < 5;
}