GL/Projet_GL/src/test/deca/context/invalid/sansObjet/if/while.deca
// Test : while_invalid_comparison
// But : interdire une comparaison entre types incompatibles.
// Couvre : opérateurs de comparaison, typage.
// Résultat attendu : erreur contextuelle.
// Erreur affichée: Incompatible types: cannot compare int with stringas stringis not int/float

{
   while (3 < "hhh") {
   }
}
